Fixed user controls alignment

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -139,7 +139,7 @@ a:hover, a:active {
 
 #userControls {
 	position: absolute;
-	right: 5%;
+	right: 8%;
 	top: 50%;
 	transform: translateY(-50%);
 }
